Updated shell scripts for new CLI